started services and filters

--- a/APB.AccessControl.Application/APB.AccessControl.Application.csproj
+++ b/APB.AccessControl.Application/APB.AccessControl.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\APB.AccessControl.Domain\APB.AccessControl.Domain.csproj" />
+    <ProjectReference Include="..\APB.AccessControl.Shared\APB.AccessControl.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
