--- a/AccessControl.WebApi/appsettings.json
+++ b/AccessControl.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=AccessControlDb;Username=postgres;Password=mysecretpassword"
+  },
   "AllowedHosts": "*"
 }
