--- a/AccessControl.ClientApp/AccessControl.ClientApp.csproj
+++ b/AccessControl.ClientApp/AccessControl.ClientApp.csproj
@@ -8,6 +8,32 @@
 
   <ItemGroup>
     <PackageReference Include="DevExpress.Win.Design" Version="23.2.3" />
+    <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\APB.AccessControl.Shared\APB.AccessControl.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="APB.SV.CardData">
+      <HintPath>APB.SV.CardData.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
