--- a/APB.AccessControl.WebApi/appsettings.json
+++ b/APB.AccessControl.WebApi/appsettings.json
@@ -3,10 +3,31 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "File": {
+      "LogDirectory": "C:\\ProgramData\\APB.AccessControl",
+      "FileNamePrefix": "apb_",
+      "LogLevels": {
+        "Information": true,
+        "Warning": true,
+        "Error": true,
+        "Critical": true,
+        "Debug": false
+      }
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=AccessControlDb;Username=postgres;Password=mysecretpassword"
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "APB.AccessControl",
+    "ExpiryMinutes": 720,
+    "Key": "99EF94EC-3FD3-405D-A497-7606C82037E9"
+  },
+  "AdminCredentials": {
+    "Username": "admin",
+    "Password": "Adminpassword777"
+  }
 }
