--- a/APB.AccessControl.ClientApp1/APB.AccessControl.ClientApp1.csproj
+++ b/APB.AccessControl.ClientApp1/APB.AccessControl.ClientApp1.csproj
@@ -10,9 +10,6 @@
 
   <ItemGroup>
     <PackageReference Include="DevExpress.Data" Version="24.2.6" />
-    <PackageReference Include="DevExpress.Win" Version="24.2.6" />
-    <PackageReference Include="DevExpress.Win.BonusSkins" Version="24.2.6" />
-    <PackageReference Include="DevExpress.Win.Design" Version="24.2.6" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.37" />
   </ItemGroup>
 
@@ -24,6 +21,21 @@
     <Reference Include="APB.SV.CardData">
       <HintPath>..\APB.SV.CardData.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
