--- a/APB.AccessControl.ClientApp1/App.config
+++ b/APB.AccessControl.ClientApp1/App.config
@@ -14,7 +14,7 @@
         <value>True</value>
       </setting>
       <setting name="DefaultAppSkin" serializeAs="String">
-        <value>CompactSkin/WXI</value>
+        <value></value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
         <value></value>
